# agent-haymaker

./: .env.example  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
docs/: _config.yml  cli-reference.md  creating-workloads.md  index.md  llm-providers.md
src/agent_haymaker/: __init__.py
src/agent_haymaker/azure/: __init__.py  az_cli.py  config.py  container_apps.py  platform.py  provisioning.py  service_bus.py
src/agent_haymaker/cli/: __init__.py  azure_commands.py  deploy.py  lifecycle.py  lookup.py  main.py  watch.py  workload_mgmt.py
src/agent_haymaker/events/: __init__.py  bus.py  types.py
src/agent_haymaker/llm/: __init__.py  config.py  exceptions.py  factory.py  types.py
src/agent_haymaker/llm/providers/: __init__.py  anthropic.py  azure_ai_foundry.py  azure_openai.py  base.py
src/agent_haymaker/orchestrator/: __init__.py  fan_out.py  monitoring.py  phases.py  types.py  workflow.py
src/agent_haymaker/workloads/: __init__.py  base.py  event_helpers.py  file_platform.py  models.py  platform.py  registry.py
tests/: conftest.py
tests/unit/: test_cli.py  test_event_bus.py  test_event_bus_edge_cases.py  test_file_platform.py  test_llm_config.py  test_llm_factory.py  test_llm_providers.py  test_llm_types.py  test_models.py  test_orchestrator.py  test_registry.py  test_service_bus.py  test_watch.py  test_workload_base.py  test_workload_events.py
