[project]
name = "agent-haymaker"
version = "0.2.0"
description = "Universal workload orchestration platform for Azure and M365 telemetry generation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Haymaker Team" }
]
keywords = ["azure", "m365", "orchestration", "telemetry", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "azure-ai-inference>=1.0.0b9",
    "azure-identity>=1.14.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/rysweet/agent-haymaker"
Repository = "https://github.com/rysweet/agent-haymaker"
Issues = "https://github.com/rysweet/agent-haymaker/issues"

[project.scripts]
haymaker = "agent_haymaker.cli:main"

[project.entry-points."agent_haymaker.workloads"]
# Workloads register themselves here via their own pyproject.toml
# Example:
# m365-knowledge-worker = "haymaker_m365_workloads:M365KnowledgeWorkerWorkload"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_haymaker"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
